--- a/Website/content/publication/cop2017.md
+++ b/Website/content/publication/cop2017.md
@@ -3,7 +3,7 @@ title = "Income inequality and well-being"
 date = 2017-12-01T00:00:00
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
-authors = ["Buttrick, N. R.", "Heintzelman, S. H.", "Oishi, S."]
+authors = ["**Buttrick, N. R.**", "Heintzelman, S. H.", "Oishi, S."]
 
 # Publication type.
 # Legend:
