--- a/Website/content/publication/jep2016.md
+++ b/Website/content/publication/jep2016.md
@@ -3,7 +3,7 @@ title = "New directions in social psychological interventions to improve academi
 date = 2016-04-01T00:00:00
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
-authors = ["Wilson, T. D.", "Buttrick, N. R."]
+authors = ["Wilson, T. D.", "**Buttrick, N. R.**"]
 
 # Publication type.
 # Legend:
