--- a/Website/content/publication/jpsp2018.md
+++ b/Website/content/publication/jpsp2018.md
@@ -3,7 +3,7 @@ title = "Cross-cultural consistency and relativity in the enjoyment of thinking 
 date = 2018-04-01T00:00:00
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
-authors = ["Buttrick, N. R.", "Choi, H.", "Wilson, T. D.", "Oishi, S.", "Boker, S. M.", "Gilbert, D. T", "Alper, S.", "Aveyard, M.", "Cheong, W.", "Colic, M. V.", "Dalgar, I.", "Dogulu, C.", "Karabati, S.", "Kim, E.", "Knezevic, G.", "Komiya, A.", "Lacle, C. O.", "Lage, C. A.", "Lazarevic, L. B.", "Lazarevic, D.", "Lins, S.", "Molina, M. B.", "Neto, F.", "Orlic, A.", "Petrovic, B.", "Sibaja, M. A.", "Fernandez, D. T.", "Vanpaemel, W.", "Voorspoels, W.", "Wilks, D. C."]
+authors = ["**Buttrick, N. R.**", "Choi, H.", "Wilson, T. D.", "Oishi, S.", "Boker, S. M.", "Gilbert, D. T", "Alper, S.", "Aveyard, M.", "Cheong, W.", "Colic, M. V.", "Dalgar, I.", "Dogulu, C.", "Karabati, S.", "Kim, E.", "Knezevic, G.", "Komiya, A.", "Lacle, C. O.", "Lage, C. A.", "Lazarevic, L. B.", "Lazarevic, D.", "Lins, S.", "Molina, M. B.", "Neto, F.", "Orlic, A.", "Petrovic, B.", "Sibaja, M. A.", "Fernandez, D. T.", "Vanpaemel, W.", "Voorspoels, W.", "Wilks, D. C."]
 
 # Publication type.
 # Legend:
