--- a/content/talk/aps2018.md
+++ b/content/talk/aps2018.md
@@ -21,7 +21,7 @@ projects = []
 
 # Links (optional).
 url_pdf = ""
-url_slides = ""
+url_slides = "files/APS2018.pdf"
 url_video = ""
 url_code = ""
 
