--- a/content/publication/jpsp2018.md
+++ b/content/publication/jpsp2018.md
@@ -49,7 +49,7 @@ url_source = ""
 
 # Custom links (optional).
 #   Uncomment line below to enable. For multiple links, use the form `[{...}, {...}, {...}]`.
-#url_custom = [{name = "Article", url = "https://www.sciencedirect.com/science/article/pii/S2352250X17300866"}]
+url_custom = [{name = "Article", url = "http://psycnet.apa.org/record/2018-35570-001"}]
 
 # Does the content use math formatting?
 math = true
