--- a/content/talk/spsp2019.md
+++ b/content/talk/spsp2019.md
@@ -21,7 +21,7 @@ projects = []
 
 # Links (optional).
 url_pdf = ""
-url_slides = ""
+url_slides = "files/SPSP2019.pdf"
 url_video = ""
 url_code = ""
 
