--- a/content/publication/jesp2019.md
+++ b/content/publication/jesp2019.md
@@ -40,7 +40,7 @@ projects = []
 url_pdf = ""
 url_preprint = "https://psyarxiv.com/94by7"
 url_code = ""
-url_dataset = ""
+url_dataset = "https://osf.io/6d7xp/"
 url_project = ""
 url_slides = ""
 url_video = ""
