--- a/content/publication/pps2019.md
+++ b/content/publication/pps2019.md
@@ -49,7 +49,7 @@ url_source = ""
 
 # Custom links (optional).
 #   Uncomment line below to enable. For multiple links, use the form `[{...}, {...}, {...}]`.
-#url_custom = [{name = "Article", url = "https://www.nature.com/articles/s41562-018-0399-z"}]
+url_custom = [{name = "Article", url = "https://journals.sagepub.com/doi/full/10.1177/1745691619898847"}]
 
 # Does the content use math formatting?
 math = true
