--- a/content/publication/sr2021.md
+++ b/content/publication/sr2021.md
@@ -5,9 +5,7 @@ date = 2021-04-16T00:00:00
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
 authors = ["Nisa, C.", "Bélanger, J.J.", "Faller, D. G.", "**Buttrick, N.**", "Mierau, J. O.", "Austin, M.", "Schumpe, B. M.", "Sasin, E. M.", "Agostini, M.", "Gützkow, B.", "Kreienkamp, J.", "Abakoumkin, G.", "Abdul Khaiyom, J. H.", "Ahmedi, V.", "Akkas, H.", "Almenara, C. A.", "Atta, M.", "Bagci, S. C.", "Basel, S.", "Berisha Kida, E.", "Bernardo, A. B.", "Chobthamkit, P.", "Choi H.-S.", "Cristea, M.", "Csaba, S.", "Damnjanovic, K.", "Danyliuk, I.", "Dash, A.", "Di Santo, D.",
 "Douglas, K. M.", "Enea, V.", "Fitzsimons, G.", "Gheorghiu, A.", "Gómez, A.", "Grzymala‐Moszczynska, J.", "Hamaidia, A.", "Han, Q.", "Helmy, M.","Hudiyana, J.", "Jeronimus, B. F.", "Jiang, D.-Y.", "Jovanović, V.", "Kamenov, Ž ", "Kende, A.", "Keng, S.-L.", "Kieu, T. T. T.", "Koc, Y.", "Kovyazina, K.", "Kozytska, I.", "Krause, J.", "Kruglanski, A. W.", "Kurapov, A.", "Kutlaca, M.", "Lantos, N.", "Lemay Jr., E. P.", "Lesmana, C. B. J.", "Louis, W. R.", "Lueders, A.", "Malik, N. I.", 
-"Martinez, A.", "McCabe, K. O.", "Mehulić, J.", "Milla, M. N.", "Mohammed, I.", "Molinario, E.", "Moyano, M.", "Muhammad, H.", "Mula, S.", "Muluk, H.", "Myroniuk, S.", "Najaf, R.", "Nyúl, B.", "O’Keefe, P. A.", "Olivas Osuna, J. J.", "Osin, E. N.", "Park, J.", "Pica, G.", "Pierro, A.", "Rees, J.",  "Reitsema, A. M.", "Resta, E.", "Rullo, M", "Ryan, M. K.", "Samekin, A.", "Santtila, P.", "Selim, H. A.", "Stanton, M. V.", "Sultana, S.", "Sutton, R. M.", "Tseliou, E.", "Utsugi, A.", "van Breen, J. A.", "Van Lissa, C. J.", "Van Veen, K.", "vanDellen, M. R.", "Vázquez, A.", "Wollast, R.", "Yeung, V. W.-L.", "Zand, S.", "Žeželj, I. L.", "Zheng, B.", "Zick, A.", "Zúñiga, C.", "Leander, N. P."
-
-]
+"Martinez, A.", "McCabe, K. O.", "Mehulić, J.", "Milla, M. N.", "Mohammed, I.", "Molinario, E.", "Moyano, M.", "Muhammad, H.", "Mula, S.", "Muluk, H.", "Myroniuk, S.", "Najaf, R.", "Nyúl, B.", "O’Keefe, P. A.", "Olivas Osuna, J. J.", "Osin, E. N.", "Park, J.", "Pica, G.", "Pierro, A.", "Rees, J.",  "Reitsema, A. M.", "Resta, E.", "Rullo, M", "Ryan, M. K.", "Samekin, A.", "Santtila, P.", "Selim, H. A.", "Stanton, M. V.", "Sultana, S.", "Sutton, R. M.", "Tseliou, E.", "Utsugi, A.", "van Breen, J. A.", "Van Lissa, C. J.", "Van Veen, K.", "vanDellen, M. R.", "Vázquez, A.", "Wollast, R.", "Yeung, V. W.-L.", "Zand, S.", "Žeželj, I. L.", "Zheng, B.", "Zick, A.", "Zúñiga, C.", "Leander, N. P."]
 
 # Publication type.
 # Legend:
