--- a/content/publication/emo2021.md
+++ b/content/publication/emo2021.md
@@ -3,7 +3,7 @@ title = "A trade-off model of intentional thinking for pleasure"
 date = 2021-08-02T00:00:00
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
-authors = ["Raza, S." "Westgate, E.", "**Buttrick, N.**", "Heintzelman, S." "Furrer, R.", "Gilbert, D.", "Libby, L.", "Wilson, T."]
+authors = ["Raza, S.", "Westgate, E.", "**Buttrick, N.**", "Heintzelman, S.", "Furrer, R.", "Gilbert, D.", "Libby, L.", "Wilson, T."]
 
 # Publication type.
 # Legend:
