--- a/content/talk/spsp2022.md
+++ b/content/talk/spsp2022.md
@@ -1,7 +1,7 @@
 +++
 date = 2022-02-19T00:00:00  # Schedule page publish date.
 
-title = "'Historical prevalence of slavery predicts contemporary American gun ownership"
+title = "Historical prevalence of slavery predicts contemporary American gun ownership"
 time_start = 2022-02-19T14:00:00
 time_end = 2022-02-19T15:15:00
 abstract = "American gun-owners, uniquely, view firearms as a means of keeping themselves safe from dangers both physical and psychological. We root this belief in the experience of White Southerners during Reconstruction - a moment when a massive upsurge in the availability of firearms co-occurred with a worldview threat from the emancipation and the political empowerment of Black Southerners. We show that the belief-complex formed in this historical moment shapes contemporary gun culture: the prevalence of slavery in a Southern county (measured in 1860) predicts the frequency of firearms in the present day. This relationship holds above and beyond a number of potential covariates including contemporary crime rates, police spending, degree of racial segregation and inequality, socioeconomic conditions, and voting patterns in the 2016 Presidential election; and is partially mediated by the frequency of people in the county reporting that they generally do not feel safe. We further show that these beliefs track Southern patterns of migration, as social connection to historically slaveholding counties predicts county-level gun ownership, even outside of the South."
