--- a/content/publication/emo2021.md
+++ b/content/publication/emo2021.md
@@ -49,7 +49,7 @@ url_source = ""
 
 # Custom links (optional).
 #   Uncomment line below to enable. For multiple links, use the form `[{...}, {...}, {...}]`.
-#url_custom = [{name = "Article", url = "https://www.sciencedirect.com/science/article/pii/S0022103119305682"}]
+url_custom = [{name = "Article", url = "https://psycnet.apa.org/record/2022-16378-001"}]
 
 # Does the content use math formatting?
 math = true
