--- a/content/publication/ijp2021.md
+++ b/content/publication/ijp2021.md
@@ -1,5 +1,5 @@
 +++
-title = "Well-being in the time of COVID-19: Metaphors matter"
+title = "Well-being in the time of COVID-19: Do metaphors matter?"
 date = 2021-05-14T00:00:00
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
@@ -49,7 +49,7 @@ url_source = ""
 
 # Custom links (optional).
 #   Uncomment line below to enable. For multiple links, use the form `[{...}, {...}, {...}]`.
-#url_custom = [{name = "Article", url = "https://www.sciencedirect.com/science/article/pii/S0022103119305682"}]
+url_custom = [{name = "Article", url = "https://onlinelibrary.wiley.com/doi/full/10.1002/ijop.12785"}]
 
 # Does the content use math formatting?
 math = true
