--- a/content/publication/pspb2020.md
+++ b/content/publication/pspb2020.md
@@ -49,7 +49,7 @@ url_source = ""
 
 # Custom links (optional).
 #   Uncomment line below to enable. For multiple links, use the form `[{...}, {...}, {...}]`.
-#url_custom = [{name = "Article", url = "https://www.sciencedirect.com/science/article/pii/S0022103119305682"}]
+url_custom = [{name = "Article", url = "https://journals.sagepub.com/doi/abs/10.1177/0146167220907467"}]
 
 # Does the content use math formatting?
 math = true
