--- a/content/publication/sr2021.md
+++ b/content/publication/sr2021.md
@@ -1,5 +1,5 @@
 +++
-title = "Perceived economic risk (vs. health risk) motivates individual efforts to fight COVID‐19: a multilevel analysis in 24 countries"
+title = "Lives versus Livelihoods? Perceived economic risk has a stronger association with support for COVID-19 preventive measures than perceived health risk"
 date = 2021-04-16T00:00:00
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
@@ -51,7 +51,7 @@ url_source = ""
 
 # Custom links (optional).
 #   Uncomment line below to enable. For multiple links, use the form `[{...}, {...}, {...}]`.
-#url_custom = [{name = "Article", url = "https://www.sciencedirect.com/science/article/pii/S0022103119305682"}]
+url_custom = [{name = "Article", url = "https://www.nature.com/articles/s41598-021-88314-4"}]
 
 # Does the content use math formatting?
 math = true
