Oct 5 update (pt. 6)

--- a/content/publication/nhb2023.md
+++ b/content/publication/nhb2023.md
@@ -1,5 +1,5 @@
 +++
-title = "High Replicability of Newly-Discovered Social-behavioral Findings is Achievable"
+title = "High replicability of newly-discovered social-behavioral findings is achievable"
 date = 2023-10-05T00:00:00
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
