--- a/content/publication/tics2024.md
+++ b/content/publication/tics2024.md
@@ -21,8 +21,7 @@ publication = "*Trends in Cognitive Sciences*"
 publication_short = "*TiCS*"
 
 # Abstract and optional shortened version.
-abstract = "Large language models (LLMs) extract and reproduce the statistical regularities in their training data.
-Researchers can use these models to study the conceptual relationships encoded in this training data (i.e., the open internet), providing a remarkable opportunity to understand the cultural distinctions embedded within much of recorded human communication."
+abstract = "Large language models (LLMs) extract and reproduce the statistical regularities in their training data. Researchers can use these models to study the conceptual relationships encoded in this training data (i.e., the open internet), providing a remarkable opportunity to understand the cultural distinctions embedded within much of recorded human communication."
 abstract_short = ""
 
 # Featured image thumbnail (optional)
